# gl_search

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-pipeline.yaml  release.yaml
gl_search/: __init__.py  cli.py  config.py  display.py  models.py  search.py  utils.py
gl_search/clis/: __init__.py  config.py  search.py
tests/: test_cli.py  test_display.py  test_gl_search.py  test_models.py  test_search.py  test_utils.py  utils.py
tests/test_clis/: test_config.py  test_search.py
