[tool.poetry]
name = "gl_search"
version = "0.3.0"
description = "Script to help search code in self-hosted gitlab"
authors = ["Bernardo Gomes <bgomesdeabreu@gmail.com>"]
maintainers = ["Bernardo Gomes <bgomesdeabreu@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Bernardoow/gl_search"
keywords = ["gitlab", "search", "search code", "api"]
include = ["CHANGELOG.md", "LICENSE", "settings.toml"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Environment :: Console",
    "Topic :: Terminals",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
requests = "^2.28.1"
rich = "^12.6.0"
pydantic = "^1.10.2"
dynaconf = "^3.1.11"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
poethepoet = "^0.16.2"
pytest-socket = "^0.5.1"
pytest-unordered = "^0.5.1"
pre-commit = "^2.20.0"


[tool.poetry.group.code-quality.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
bandit = "^1.7.4"
isort = "^5.10.1"
safety = "^2.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gl-search = "gl_search.cli:cli"

[tool.poe.tasks]
test = "pytest --cov=gl_search --cov-report html"

[tool.pytest.ini_options]
addopts = "--disable-socket -vv"

[tool.coverage.report]
exclude_lines = [
    '\.\.\.'
]

[tool.coverage.run]
omit = [
    'gl_search/__main__.py'
]

[tool.black]
line-length = 110
target-version = ['py39']

[tool.isort]
atomic = true
profile = "black"
line_length = 110
skip_gitignore = true
py_version=39
